--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -25,6 +25,7 @@
 body{
   background-color: $color1;
   overflow-x:hidden;
+  
 
 }
 .disableBtn{
@@ -32,4 +33,26 @@ body{
   color: black !important;
   cursor: not-allowed !important;
 }
+#upwardArrow{
+  >svg{
+    z-index: 100;
+  }
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background:$color2_2 ;
+}
+
+::-webkit-scrollbar-thumb {
+  background:$color2 ;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #000000;
+}
+
+
 
