--- a/src/style/contact.scss
+++ b/src/style/contact.scss
@@ -1,7 +1,7 @@
 #contact{
     overflow-x: hidden;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     padding: 4rem 3rem;
     display: flex;
     flex-direction: column;
