--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -1,8 +1,8 @@
 #home{
     width: 100%;
-    height: 90vh;
+    height: 100%;
     display: flex;
-    overflow-x: hidden;
+    overflow: hidden;
 
     >section{
         width: 100%;
@@ -113,15 +113,17 @@
             }
         }
     }
-    >svg{
-        font-size: 3.5rem;
+    >a{
         position: absolute;
         left: 50%;
-        color: $color6_1;
         bottom: 3%;
         transform: translateX(-50%);
         cursor: pointer;
         animation: animateSvg 0.7s infinite linear alternate  ;
+        >svg{
+            font-size: 3.5rem;
+            color: $color6_1;
+        }
     }
 
 }
