--- a/src/style/work.scss
+++ b/src/style/work.scss
@@ -33,6 +33,7 @@
       .myWork {
         margin: auto;
         height: 100%;
+        position: relative;
         padding: 2rem 0rem;
         width: 80%;
         display: flex;
@@ -49,6 +50,7 @@
         }
         >aside{
           overflow-y: auto;
+          max-height: 90%;
                 width: 100%;
                 color: white;
                 >h3{
@@ -56,7 +58,7 @@
                     font: 700 2rem $font5;
                 }
                 >p{
-                    font: 1.2rem $font3;
+                    font: 1rem $font3;
                     letter-spacing: 3px;
                     line-height: 200%;
                     margin: 2rem 0rem;
